Feature/29 endpoint versioning (#30)
* [29] Implements versioning

* [29] Adds unit tests